--- a/ending.html
+++ b/ending.html
@@ -122,7 +122,7 @@
              那么，就到这里吧，有缘自会相见~
            </p>
            <br><br>
-           <textarea>有什么建议都可以写在这里哦~</textarea>
+           <a class="btn btn-outline-info" href="mailto:cys021031@163.com">Email Me</a>
         </div>
     </div>
   </div>
