--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
           <li class="nav-item">
             <a class="nav-link" href="ending.html">尾声</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="to mom.html">致老妈</a>
+          </li>
         </ul>
       </div>
       <!--<audio controls>
