change the format of the particle

--- a/tomom.html
+++ b/tomom.html
@@ -13,6 +13,11 @@
 
   <style type="text/css">
 
+  p {
+    text-align: justify;
+    text-indent: 35px;
+  }
+
   body {
       background-image: url("照片/2.jpg");
       background-color: #cccccc;
@@ -87,7 +92,7 @@
       <div class="collapse navbar-collapse" id="navbar">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -111,7 +116,7 @@
             <a class="nav-link" href="ending.html">尾声</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="to mom.html">致老妈</a>
+            <a class="nav-link" href="tomom.html">致老妈</a>
           </li>
         </ul>
       </div>
@@ -132,27 +137,32 @@
         </div>
       </div>
       <div class="col-sm-5 col-md-6 col-lg-7">
-        <div>
          <h2 style="text-align:center">致老妈</h2>
          <h6 style="text-align:right">2020.05.03</h6><br>
-         <p>写这个信是因为快到母亲节了，尽管之前也都有通过书面的方式写信或者做手工作为礼物，但这次既然学了这么一个神奇的语言，
-           我就想着用这种新学习的技能来表达自己，嘿。<br>
-           不是第一次给老妈写信了，每次好像说的话大同小异，但还是要写，毕竟能看到我妈的金疙瘩。<br>
-           妈，节日快乐呀，做老妈这么多年，让你辛苦了吧。大多数唱红脸，看到我实在是太不争气的时候唱唱白脸，想想就很累。
-           生气的时候，咱们俩是真的都生气，感觉互相都不能理解自己，当然，大部分你生气的时候，绝对是因为我做错了事情。
-           不生气的时候，也是真的很爱对方。我想，如果我妈跟我是一辈人，那我们一定是很好的闺蜜。
-           做母亲的难处，我说懂也不懂。是那种望子成龙，望女成凤，又担心逼得太紧累到孩子的这种感受吧。可能还有那种无力感，
-           小的时候，老师留的家庭作业家长还能教一下，我们长大后，妈妈都是看着自己的孩子干着急。但也没有关系啊，雏鸟总要学会独立飞行的嘛。<br>
-           我觉得我妈做母亲的高度，应该是没有人能超越的。上得厅堂，下得厨房。虽然很久不当医生了，但生病这么多年，从医生哪儿也学会不少，
-           自己的老本行在生活中的点滴中透露着。做菜说着什么食材什么作用，要是我起个闷包也会分析分析。<br>
-           同学妈妈说我妈属木，种花种草种菜样样在行，我觉得在理。别看我妈没学过这些，网上查查资料，自己发酵营养液，整个阳台都是绿油油的。
-           搬家之前的小院子里，满满的全是瓜果蔬菜，什么丝瓜南瓜，茄子小西红柿，苋菜油麦菜，老丰富了。是个勤劳的劳动人民！<br>
-           说到种菜了，做饭就逃不了了，我妈做饭一等一的棒，嘿。很多很多我都超爱吃，新晋“宠妃”是梅菜扣肉和糖醋小排，还有羊肉馅饼。
-           我体重这么重可能都是我妈做饭好吃的缘故。<br>
-           这两年你的视力也不好了，就开始爱听书了，什么书都有，一本书还会听好多遍，是我学习的榜样。
+         <div>
+           <p>写这个信是因为快到母亲节了，尽管之前也都有通过书面的方式写信或者做手工作为礼物，但这次既然学了这么一个神奇的语言，
+           我就想着用这种新学习的技能来表达自己，嘿。不是第一次给老妈写信了，每次好像说的话大同小异，但我妈每次看了都开心许久</p>
 
-        </div>
+           <p>妈，节日快乐呀，做老妈这么多年，让你辛苦了吧。大多数唱红脸，看到我实在是太不争气的时候唱唱白脸，想想就很累。
+           生气的时候，咱们俩是真的都生气，感觉互相都不能理解自己，当然，大部分你生气的时候，绝对是因为我做错了事情。不生气的时候，也是真的很爱对方。我想，如果我妈跟我是一辈人，那我们一定是很好的闺蜜。</p>
+           做母亲的难处，我说懂也不懂。是那种望子成龙，望女成凤，又担心逼得太紧累到孩子的这种感受吧。可能还有那种无力感，小的时候，老师留的家庭作业家长还能教一下，我们
+           长大后，妈妈都是看着自己的孩子干着急。但也没有关系啊，雏鸟总要学会独立飞行的嘛。</p>
+         </div>
       </div>
+    </div>
+    <br><br><br>
+
+    <div class="row">
+        <div class="col-sm-5 col-md-6 col-lg-7">
+           <p>我觉得我妈做母亲的高度，应该是没有人能超越的。上得厅堂，下得厨房。虽然很久不当医生了，但生病这么多年，从医生哪儿也学会不少，自己的老本行在生活中的点滴中透露着。做菜说着什么食材什么作用，要是我起个闷包也会分析分析。</p>
+           <p>同学妈妈说我妈属木，种花种草种菜样样在行，我觉得在理。别看我妈没学过这些，网上查查资料，自己发酵营养液，整个阳台都是绿油油的。搬家之前的小院子里，满满的
+             全是瓜果蔬菜，什么丝瓜南瓜，茄子小西红柿，苋菜油麦菜，老丰富了。是个勤劳的劳动人民！</p>
+           <p>说到种菜了，做饭就逃不了了，我妈做饭一等一的棒，嘿。很多很多我都超爱吃，新晋“宠妃”是梅菜扣肉和糖醋小排，还有羊肉馅饼！我体重这么重可能都是我妈做饭好吃的
+             缘故。哦对，我妈针线活也很厉害的！小时候的鞋子啊，衣服裤子我妈都会做，长大了也给我织毛衣，暖和极了！</p>
+           <p>这两年你的视力也不好了，就开始爱听书了，什么书都有，一本书还会听好多遍，是我学习的榜样。</p>
+
+
+
 
 
 
