--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbar">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -46,7 +46,7 @@
             <a class="nav-link" href="ending.html">尾声</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="to mom.html">致老妈</a>
+            <a class="nav-link" href="tomom.html">致老妈</a>
           </li>
         </ul>
       </div>
