--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <h1>
                 欢迎来到acai的秘密基地
             </h1>
-            <a class="btn-light" href="index.html">->click here!</a>
+            <a class="btn-light" href="home.html">->click here!</a>
         </div>
         <!--<div class="text-left sky-container__right">
             <h2 class="08">
