--- a/tomom.html
+++ b/tomom.html
@@ -137,7 +137,7 @@
         </div>
       </div>
       <div class="col-sm-5 col-md-6 col-lg-7">
-         <h2 style="text-align:center">致老妈</h2>
+         <h2 style="text-align:center">致老妈</h2><br>
          <h6 style="text-align:right">2020.05.03</h6><br>
          <div>
            <p>写这个信是因为快到母亲节了，尽管之前也都有通过书面的方式写信或者做手工作为礼物，但这次既然学了这么一个神奇的语言，
@@ -153,13 +153,25 @@
     <br><br><br>
 
     <div class="row">
-        <div class="col-sm-5 col-md-6 col-lg-7">
-           <p>我觉得我妈做母亲的高度，应该是没有人能超越的。上得厅堂，下得厨房。虽然很久不当医生了，但生病这么多年，从医生哪儿也学会不少，自己的老本行在生活中的点滴中透露着。做菜说着什么食材什么作用，要是我起个闷包也会分析分析。</p>
-           <p>同学妈妈说我妈属木，种花种草种菜样样在行，我觉得在理。别看我妈没学过这些，网上查查资料，自己发酵营养液，整个阳台都是绿油油的。搬家之前的小院子里，满满的
-             全是瓜果蔬菜，什么丝瓜南瓜，茄子小西红柿，苋菜油麦菜，老丰富了。是个勤劳的劳动人民！</p>
-           <p>说到种菜了，做饭就逃不了了，我妈做饭一等一的棒，嘿。很多很多我都超爱吃，新晋“宠妃”是梅菜扣肉和糖醋小排，还有羊肉馅饼！我体重这么重可能都是我妈做饭好吃的
-             缘故。哦对，我妈针线活也很厉害的！小时候的鞋子啊，衣服裤子我妈都会做，长大了也给我织毛衣，暖和极了！</p>
-           <p>这两年你的视力也不好了，就开始爱听书了，什么书都有，一本书还会听好多遍，是我学习的榜样。</p>
+      <div class="col-sm-5 col-md-6 col-lg-7">
+         <p>我觉得我妈做母亲的高度，应该是没有人能超越的。上得厅堂，下得厨房。虽然很久不当医生了，但生病这么多年，从医生哪儿也学会不少，自己的老本行在生活中的点滴中透露着。做菜说着什么食材什么作用，要是我起个闷包也会分析分析。</p>
+         <p>同学妈妈说我妈属木，种花种草种菜样样在行，我觉得在理。别看我妈没学过这些，网上查查资料，自己发酵营养液，整个阳台都是绿油油的。搬家之前的小院子里，满满的
+           全是瓜果蔬菜，什么丝瓜南瓜，茄子小西红柿，苋菜油麦菜，老丰富了。是个勤劳的劳动人民！</p>
+         <p>说到种菜了，做饭就逃不了了，我妈做饭一等一的棒，嘿。很多很多我都超爱吃，新晋“宠妃”是梅菜扣肉和糖醋小排，还有羊肉馅饼！我体重这么重可能都是我妈做饭好吃的
+           缘故。哦对，我妈针线活也很厉害的！小时候的鞋子啊，衣服裤子我妈都会做，长大了也给我织毛衣，暖和极了！</p>
+         <p>这两年你的视力也不好了，就开始爱听书了，什么书都有，一本书还会听好多遍，是
+           我学习的榜样。年龄增大了，还老爱躺着床上看手机，其实要开始注意用眼了。种菜虽然干劲十足，但是既然手不好，还是慢慢来，不要累着。少生气，少喝药，不说废话，多睡
+          觉。</p>
+         <p>总之：爱自己多一点点。母亲节快乐！</p>
+       </div>
+
+       <div class="col-sm-7 col-md-6 col-lg-5">
+         <div class="container-fluid">
+           <img class="img-responsive mt-4" src="照片\和我妈.jpg">
+         </div>
+       </div>
+    </div>
+    <br><br><br>
 
 
 
@@ -167,7 +179,11 @@
 
 
 
-  <br><br><br>
+
+
+
+
+
 
 
 
