--- a/paint.html
+++ b/paint.html
@@ -42,6 +42,9 @@
           <li class="nav-item">
             <a class="nav-link" href="ending.html">尾声</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="tomom.html">致老妈</a>
+          </li>
         </ul>
       </div>
     </div>
