--- a/ending.html
+++ b/ending.html
@@ -56,6 +56,9 @@
           </li>
         </ul>
       </div>
+      <audio controls>
+       <source src="照片\lolipop.mp3" type="audio/mpeg">
+      </audio>
     </div>
   </nav><br><br><br>
 
