--- a/ruber.html
+++ b/ruber.html
@@ -5,10 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
 
-  <title>acai的个人网站</title>
+  <title>Yishan Cai</title>
 </head>
 
 <body>
@@ -25,28 +27,29 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              爱好
+              Hobby
             </a>
             <div class="dropdown-menu" aria-labelledby="navbar">
-              <a class="dropdown-item" href="paint.html" target="_top">画画</a>
-              <a class="dropdown-item" href="pipa.html" target="_top">弹琵琶</a>
-              <a class="dropdown-item" href="ruber.html" target="_top">橡皮章</a>
+              <a class="dropdown-item" href="paint.html" target="_top">Paint</a>
+              <a class="dropdown-item" href="pipa.html" target="_top">Pipa</a>
+              <a class="dropdown-item" href="ruber.html" target="_top">Rubber stamp</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="photo.html" target="_top">摄影</a>
+            <a class="nav-link" href="photo.html" target="_top">Photography</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="volunteer.html" target="_top">志愿</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="ending.html">尾声</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="tomom.html">致老妈</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
+
+      <div class="icon-container">
+        <span><a href="https://github.com/acai1031"><i class="fab fa-github"></i></a></span>
+        <span><a href="https://www.linkedin.com/in/yishan-cai-760470252/"><i class="fab fa-linkedin"></i></a></span>
+        <span><a href="https://www.instagram.com/aaacai_1031/"><i class="fab fa-instagram"></i></a></span>
+      </div>
+      
     </div>
   </nav>
   <br><br>
