--- a/contact.html
+++ b/contact.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <html lang= "en">
-<head>
-  <meta charset= "utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <head>
+    <meta charset= "utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
+    
+    <title>Contact - Yishan Cai</title>
+    <style>
+    p {
+      text-align: justify;
+      text-indent: 35px;
+    }
+    </style>
+  </head>
 
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  <!--bootstrap的CSS样式-->
-  <link rel="stylesheet" href="style.css">
-  <!--使用bootstrap的frame时，仍需要添加自己的样式。自己的样式放在后面，能覆盖bootstrap想要修改的样式。-->
-  
-  <title>Contact - Yishan Cai</title>
-  <style>
-  p {
-    text-align: justify;
-    text-indent: 35px;
-  }
-  </style>
-</head>
-
-<body>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +40,7 @@
               <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Hobby </a>
+              <a class="nav-link dropdown-toggle" href="#" id="navbar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Life </a>
               <div class="dropdown-menu" aria-labelledby="navbar">
                 <a class="dropdown-item" href="paint.html">Paint</a>
                 <a class="dropdown-item" href="pipa.html">Pipa</a>
@@ -56,6 +53,7 @@
           </ul>
         </div>
         <div class="icon-container">
+          <span><a href="mailto:yic075@ucsd.edu"><i class="fa fa-envelope"></i></a></span>
           <span><a href="https://github.com/acai1031"><i class="fab fa-github"></i></a></span>
           <span><a href="https://www.linkedin.com/in/yishan-cai-760470252/"><i class="fab fa-linkedin"></i></a></span>
           <span><a href="https://www.instagram.com/aaacai_1031/"><i class="fab fa-instagram"></i></a></span>
@@ -69,13 +67,13 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-7 col-md-6 col-lg-5">
-          <img src="照片\contact_img1.jpg" class="d-block w-100" alt="...">
+          <img src="images\contact_img1.jpg" class="d-block w-100" alt="...">
         </div>
 
         <div class="col-sm-5 col-md-6 col-lg-7">
           <div class="form-container" style="background-color:rgba(235, 235, 88, 0.25)">
             <p>Please feel free to leave your message, I will reply ASAP :) </p>
-            <form method="post" action="send_email.php">
+            <form method="post" action="mailto:yic075@ucsd.edu" enctype="text/plain">
               <div class="fields">
                 <div class="field">
                   <label for="name">Name</label>
@@ -109,13 +107,14 @@
     <!-- footer -->
     <div class="footer">
       <p> Contact Information </p>
-      <p> yic075@ucsd.edu </p>
+      <p> yic075@ucsd.edu | cys021031@163.com</p>
     </div>
   
     <!-- Scripts -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
- </body>
+  </body>
 </html>
