revise home page

--- a/contact.html
+++ b/contact.html
@@ -35,20 +35,18 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="project.html">Project</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
-            </li>
+            </li>           
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Life </a>
               <div class="dropdown-menu" aria-labelledby="navbar">
                 <a class="dropdown-item" href="paint.html">Paint</a>
                 <a class="dropdown-item" href="pipa.html">Pipa</a>
                 <a class="dropdown-item" href="ruber.html">Rubber Stamp</a>
+                <a class="dropdown-item" href="photo.html">Photography</a>
               </div>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="photo.html">Photography</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
             </li>
           </ul>
         </div>
