--- a/paint.html
+++ b/paint.html
@@ -38,10 +38,8 @@
               <a class="dropdown-item" href="paint.html" target="_top">Paint</a>
               <a class="dropdown-item" href="pipa.html" target="_top">Pipa</a>
               <a class="dropdown-item" href="ruber.html" target="_top">Rubber stamp</a>
+              <a class="dropdown-item" href="photo.html" target="_top">Photography</a>
             </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="photo.html" target="_top">Photography</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
