--- a/photo.html
+++ b/photo.html
@@ -27,8 +27,14 @@
 
       <div class="collapse navbar-collapse" id="navbar">
         <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
+          </li>
           <li class="nav-item">
-            <a class="nav-link" href="home.html">Home</a>
+            <a class="nav-link" href="experience.html">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="project.html">Project</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -38,10 +44,8 @@
               <a class="dropdown-item" href="paint.html">Paint</a>
               <a class="dropdown-item" href="pipa.html">Pipa</a>
               <a class="dropdown-item" href="ruber.html">Rubber stamp</a>
+              <a class="dropdown-item" href="photo.html">Photography<span class="sr-only">(current)</span></a>
             </div>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="photo.html">Photography<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
