--- a/project.html
+++ b/project.html
@@ -36,9 +36,6 @@
             <li class="nav-item active">
               <a class="nav-link" href="project.html">Project <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Life
@@ -47,10 +44,11 @@
                 <a class="dropdown-item" href="paint.html">Paint</a>
                 <a class="dropdown-item" href="pipa.html">Pipa</a>
                 <a class="dropdown-item" href="ruber.html">Rubber stamp</a>
+                <a class="dropdown-item" href="photo.html">Photography</a>
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="photo.html">Photography</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
