--- a/experience.html
+++ b/experience.html
@@ -36,19 +36,17 @@
             <li class="nav-item">
               <a class="nav-link" href="project.html">Project</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Life</a>
               <div class="dropdown-menu" aria-labelledby="navbar">
                 <a class="dropdown-item" href="paint.html">Paint</a>
                 <a class="dropdown-item" href="pipa.html">Pipa</a>
                 <a class="dropdown-item" href="ruber.html">Rubber Stamp</a>
+                <a class="dropdown-item" href="photo.html">Photography</a>
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="photo.html">Photography</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
