--- a/experience.html
+++ b/experience.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbar">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="home.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="experience.html">Experience <span class="sr-only">(current)</span></a>
