--- a/index.html
+++ b/index.html
@@ -65,26 +65,28 @@
     <!-- open image -->
     <img src="images\open_bg.jpg" alt="Full Page Image" class="full-page-image">
     <div class="overlay">
-      <h1>&nbsp;I'm Yishan Cai</h1>
-      <p>A <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
+      <h1>&nbsp;&nbsp;I'm Yishan Cai</h1>
+      <p><span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
     </div>
 
     <div class="container">
       <div class="container-fluid">
 
         <div class="row">
-           <div class="col-sm-7 col-md-6 col-lg-5 mt-5">
-                <img class="img-responsive" src="images\home_img.jpg"><br>
-           </div>
-         <div class="col-sm-5 col-md-6 col-lg-7">
-            <br>
-            <h2>Self Introduction</h2><br><br>
-            <p> My name is Yishan Cai, and you can call me Yishan. </p>
-              <!-- I'm a Data Scientist, Statistical Analyst, Pipa player. 
-              I will graduate with my UC San Diego undergraduate degree, 
-              double majoring in Data Science and Math - Probability&Statistics, in June 2025. 
+          <div class="col-sm-7 col-md-6 col-lg-5 mt-5">
+              <img class="img-responsive" src="images\home_img.jpg"><br>
+          </div>
+          <div class="col-sm-5 col-md-6 col-lg-7">
+            <br><br>
+            <h2>About</h2><br>
+            <p> My name is Yishan Cai, and you can call me Yishan.
+              I'm a Data Scientist, Statistical Analyst, Pipa player. 
+              I currently study at UC San Diego, double majoring in 
+              Data Science and Math - Probability & Statistics, 
+              and will be graduated in June 2025. 
               I'm actively looking for data analysis / machine learning roles. 
-              Please contact me at yic075@ucsd.edu if you see me as a fit :)</p> -->
+              Please contact me if you see me as a fit
+            </p>
           </div>
         </div>
 
