--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" style="box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);">
       <div class="container">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -57,21 +57,20 @@
           <span><a href="https://www.instagram.com/aaacai_1031/"><i class="fab fa-instagram"></i></a></span>
         </div>
       </div>
-    </nav><br><br><br>
+    </nav>
+    <br><br><br><br><br>
 
-
-    <h2 style="color:navy;">Contact</h2>
-    <br>
-    
     <div class="container">
       <div class="row">
         <div class="col-sm-7 col-md-6 col-lg-5">
-          <img src="images\contact_img1.jpg" class="d-block w-100" alt="...">
+          <img src="images\contact_img.jpg" class="d-block w-100" alt="...">
         </div>
 
         <div class="col-sm-5 col-md-6 col-lg-7">
+          <h1 id = "contact-title"> Contact </h1>
+
           <div class="form-container" style="background-color:rgba(235, 235, 88, 0.25)">
-            <p>Please feel free to leave your message, I will reply ASAP :) </p>
+            <p style="margin-right: 0px; margin-left: 0px;"> Please feel free to leave your message, I will reply ASAP :D </p>
             <form method="post" action="mailto:yic075@ucsd.edu" enctype="text/plain">
               <div class="fields">
                 <div class="field">
