--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <body>
     <nav id="introNavbar" class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
-      <div class="container">
+      <div class = "container">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -71,25 +71,27 @@
 
     <div class="container">
       <div class="container-fluid">
-
         <div class="row">
-          <div class="col-sm-7 col-md-6 col-lg-5 mt-5">
-              <img class="img-responsive" src="images\home_img.jpg"><br>
-          </div>
+
           <div class="col-sm-5 col-md-6 col-lg-7">
-            <br><br>
-            <h2>About</h2><br>
-            <p> My name is Yishan Cai, and you can call me Yishan.
-              I'm a Data Scientist, Statistical Analyst, Pipa player. 
-              I currently study at UC San Diego, double majoring in 
+            <br>
+            <h2> About </h2>
+            <br>
+            <p> My name is Yishan Cai. I'm a Data Scientist, 
+              Statistical Analyst, Pipa player. I currently study at 
+              UC San Diego, double majoring in 
               Data Science and Math - Probability & Statistics, 
               and will be graduated in June 2025. 
               I'm actively looking for data analysis / machine learning roles. 
               Please contact me if you see me as a fit
             </p>
           </div>
-        </div>
 
+          <div class="col-sm-7 col-md-6 col-lg-5 mt-5">
+            <img class="img-responsive" src="images\home_img1.jpg"><br>
+          </div>
+
+        </div>
       </div>
     </div>
 
