--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </div>
 
           <div class="col-sm-7 col-md-6 col-lg-5 mt-5">
-            <img class="img-responsive" src="images\home_img1.jpg"><br>
+            <img class="img-responsive" src="images\home_img1.JPG"><br>
           </div>
 
         </div>
